src/test/deca/codegen/valid/divideInt.deca
// Description :
//   test de division d'un entier pour un entier
//
// Résultats :
///2
//

{
	int x = 1;
	int y = 2;
	int z = y/x;
	print(z);
}